test/src/e2e_vm_tests/test_programs/should_pass/language/multi_item_import/src/bar/double_bar.sw
library;

pub struct DoubleBar1 {
    pub a: u32,
}

pub struct DoubleBar2 {
    pub a: u64,
}

pub struct DoubleBar3 {
    pub a: u64,
}
