test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/event_indexed_attr.sw
library;

#[event]
pub struct Ok1 {
    #[indexed]
    a: u32
}

#[event(arg = "")]
pub struct NotOk1 { }

#[event]
pub struct NotOk2 {
    #[indexed(arg = "")]
    a: u32
}
